force-app/main/default/objects/HP_OptionVertelec__c/HP_OptionVertelec__c.object-meta.xml
<CustomObject>
    <label>Option Vertelec+ Happe</label>
    <nameField>
        <displayFormat>HPOV-{000000}</displayFormat>
        <label>Nom de Option Vertelec+ Happe</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Options Vertelec+ Happe</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>