force-app/main/default/objects/HP_OptionVertelec__c/fields/HP_ActivationPar__c.field-meta.xml
<CustomField>
    <fullName>HP_ActivationPar__c</fullName>
    <label>Activation par :</label>
    <length>255</length>
    <type>Text</type>
</CustomField>