force-app/main/default/objects/HP_OptionVertelec__c/fields/HP_ContratHappe__c.field-meta.xml
<CustomField>
    <fullName>HP_ContratHappe__c</fullName>
    <label>Contrat Happe</label>
    <referenceTo>HP_Contrat__c</referenceTo>
    <relationshipLabel>Options Vertelec+ Happe</relationshipLabel>
    <relationshipName>Options_Vertelec_Happe</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>