force-app/main/default/objects/HP_OptionVertelec__c/fields/HP_DateActivation__c.field-meta.xml
<CustomField>
    <fullName>HP_DateActivation__c</fullName>
    <label>Date d&apos;activation</label>
    <type>Date</type>
</CustomField>