force-app/main/default/objects/HP_OptionVertelec__c/fields/HP_DateDebut__c.field-meta.xml
<CustomField>
    <fullName>HP_DateDebut__c</fullName>
    <label>Date de début</label>
    <type>Date</type>
</CustomField>