force-app/main/default/objects/HP_OptionVertelec__c/fields/HP_DateDesactivation__c.field-meta.xml
<CustomField>
    <fullName>HP_DateDesactivation__c</fullName>
    <label>Date de désactivation</label>
    <type>Date</type>
</CustomField>