force-app/main/default/objects/HP_OptionVertelec__c/fields/HP_DateFin__c.field-meta.xml
<CustomField>
    <fullName>HP_DateFin__c</fullName>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>