force-app/main/default/objects/HP_OptionVertelec__c/fields/HP_DesactivationPar__c.field-meta.xml
<CustomField>
    <fullName>HP_DesactivationPar__c</fullName>
    <label>Désactivation par :</label>
    <length>255</length>
    <type>Text</type>
</CustomField>