force-app/main/default/objects/HP_OptionVertelec__c/fields/HP_IdXdata__c.field-meta.xml
<CustomField>
    <fullName>HP_IdXdata__c</fullName>
    <label>Id Xdata</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>