force-app/main/default/objects/HP_OptionVertelec__c/fields/HP_NumPDL__c.field-meta.xml
<CustomField>
    <fullName>HP_NumPDL__c</fullName>
    <label>N° PDL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>