force-app/main/default/objects/HP_OptionVertelec__c/fields/HP_OptionVertelec__c.field-meta.xml
<CustomField>
    <fullName>HP_OptionVertelec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Option Vertelec+ happ-e</label>
    <type>Checkbox</type>
</CustomField>